Fixed problem where image was too big when on screen with width greater than 999px, accomplished via reducing image width in media query and setting height to auto so height is automatically calculated without affecting aspect ratio.

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,8 @@ input[type="email"]:valid {
 @media screen and (min-width: 500px) {
 
   /* applies to screens wider than 499px */
+
+
   
 }
 
@@ -329,4 +331,8 @@ input[type="email"]:valid {
     border-radius: 1em;
   }
 
+  article.film img {
+    width: 30vw;
+    height: auto;
+  }
 }
